[project]
name = "hospital-booking-agent"
version = "1.0.0"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
google-auth = "^2.36.0"
google-genai = "^1.16.1"
google-cloud-storage = "^2.19.0"
google-adk = "^1.0.0"
google-cloud-aiplatform = { extras = ["adk", "agent-engines"], version = "^1.93.0" }
python-dateutil = "^2.9.0.post0"
pyjwt = "^2.10.1"
pydantic-settings = "^2.10.1"
tabulate = "^0.9.0"
deprecated = "^1.2.18"
llama-index = "^0.12.52"
isodate = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
scikit-learn = "^1.6.1"
black = "^25.1.0"
google-adk = { version = "^1.0.0", extras = ["eval"] }
deptry = "^0.23.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"
cloudpickle = "^3.1.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"